// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deserialize with a 1:1 relationship with a local id deserializes the json 1`] = `
Object {
  "company": Object {
    "lid": "666",
  },
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with a 1:1 relationship with a normal id deserializes the json 1`] = `
Object {
  "company": Object {
    "id": "666",
  },
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with a 1:1 relationship with includes with a local id deserializes the json 1`] = `
Object {
  "company": Object {
    "city": "Düsseldorf",
    "lid": "666",
    "name": "Compeon GmbH",
  },
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with a 1:1 relationship with includes with a normal id deserializes the json 1`] = `
Object {
  "company": Object {
    "city": "Düsseldorf",
    "id": "666",
    "name": "Compeon GmbH",
  },
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with a 1:n relationship with a local id deserializes the json 1`] = `
Object {
  "companies": Array [
    Object {
      "lid": "666",
    },
    Object {
      "id": "667",
    },
  ],
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with a 1:n relationship with a normal id deserializes the json 1`] = `
Object {
  "companies": Array [
    Object {
      "id": "666",
    },
    Object {
      "id": "667",
    },
  ],
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with a 1:n relationship with includes with a local id deserializes the json 1`] = `
Object {
  "companies": Array [
    Object {
      "city": "Düsseldorf",
      "lid": "666",
      "name": "Compeon GmbH",
    },
    Object {
      "city": "Düsseldorf",
      "id": "667",
      "name": "Compeon 4.0 GmbH",
    },
  ],
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with a 1:n relationship with includes with a normal id deserializes the json 1`] = `
Object {
  "companies": Array [
    Object {
      "city": "Düsseldorf",
      "id": "666",
      "name": "Compeon GmbH",
    },
    Object {
      "city": "Düsseldorf",
      "id": "667",
      "name": "Compeon 4.0 GmbH",
    },
  ],
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with an array of resources with valid attributes deserializes the json 1`] = `
Array [
  Object {
    "firstName": "Nico",
    "id": "123",
    "lastName": "Peters",
  },
  Object {
    "firstName": "Frank",
    "id": "234",
    "lastName": "Wüller",
  },
]
`;

exports[`deserialize with empty relationships ignores the relationship 1`] = `
Object {
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;

exports[`deserialize with relationships inside an array of resources deserializes the json 1`] = `
Array [
  Object {
    "company": Object {
      "city": "Düsseldorf",
      "lid": "666",
      "name": "Compeon GmbH",
    },
    "firstName": "Nico",
    "id": "123",
    "lastName": "Peters",
  },
  Object {
    "company": Object {
      "city": "Düsseldorf",
      "lid": "666",
      "name": "Compeon GmbH",
    },
    "firstName": "Frank",
    "id": "234",
    "lastName": "Wüller",
    "tags": Array [
      Object {
        "id": "912",
        "name": "Banking",
      },
      Object {
        "id": "56",
        "name": "CEO",
      },
    ],
  },
]
`;

exports[`deserialize with simple attributes with invalid attributes when data does not exist deserializes the json 1`] = `Object {}`;

exports[`deserialize with simple attributes with invalid attributes when data is empty deserializes the json 1`] = `Object {}`;

exports[`deserialize with simple attributes with valid attributes deserializes the json 1`] = `
Object {
  "firstName": "Nico",
  "id": "123",
  "lastName": "Peters",
}
`;
